tokio-postgres/tests/derive/fail/unnamed.rs
use tokio_postgres::FromRow;

#[derive(FromRow)]
struct User(i64);

fn main() {}
